Particleground no longer causes scrollbars to appear

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body { background-color: #000; }
 	background-color: rgba(0, 0, 0, 0.5);
 }
 #particleground {
-	position: absolute;
+	position: fixed;
 	top: 0;
 	width: 100%;
 	height: 100%;
